Fix alignment in hero section and call to action section

--- a/css/style.css
+++ b/css/style.css
@@ -72,9 +72,10 @@ a {
     align-items: center;
 }
 
-.content {
+.hero-content {
     display: flex;
     justify-content: space-evenly;
+    margin-left: 475px;
 }
 
 .placeholder {
@@ -83,9 +84,8 @@ a {
     width: 550px;
     background-color: rgb(166, 165, 165);
     display: flex;
-    justify-content: center;
-    flex-grow: 0;
     flex-shrink: 0;
+    justify-content: center;
     margin-left: 100px;
 }
 
@@ -184,7 +184,7 @@ a {
 .call-action-section {
     width: 200px;
     min-height: 300px;
-    margin-left: 150px;
+    margin-left: 175px;
     margin-bottom: 00px;
 }
 
@@ -196,6 +196,7 @@ a {
     height: 150px;
     margin: 75px 150px;
     border-radius: 5px;
+    margin-top: 8px;
 }
 
 .call-action-text {
@@ -220,4 +221,3 @@ a {
     text-align: center;
     flex: 1;
 }
-
